Fixed footer
footer is not overlap anymore

--- a/www/style.css
+++ b/www/style.css
@@ -54,7 +54,7 @@ html {
     height: 160px;
     width: 160px;
     border-radius: 50%;
-    margin: 30px 20px 30px 20px;
+    margin: 25px 12px 25px 12px;
     position: relative;
 }
 .circle a{
@@ -105,28 +105,46 @@ html {
 /* Contact Info*/
 
 footer {
-    background-color: #FFE88F
-    width: 1700px;
-    position: absolute;
-    left: 0px;
+    background-color: #747574
+    width: 100%
+    height: 100%;
+    /*left: 0px;
     height: 150px;
-    top: 700px;
+    top: 700px;*/
 }
 
 .contact-info{
     position: absolute;
-    background-color: #FFE88F;
-    width: 1700px;
-    position: absolute;
-    padding-top: 15px ;
-    height: 140px;
+    background-color: #747574;
+    width: 100%;
+    padding-top: 40px;
+    margin-top: 200px;
+    height: 250px;
 
 
 }
 .icon {
-    height: 45px;
-    width: 45px;
-    position: relative;
+    height: 60px;
+    width: 60px;
 }
 
-/
+#block {
+    text-align: center;
+    color: white;
+}
+h5, h6, p{
+    margin: 0;
+    padding: 0;
+}
+
+
+@media screen and (min-width: 992px){
+    footer{
+
+    }
+}
+
+
+
+
+
